# wicked

./: .env.example  .gitignore  .prettierignore  Cargo.toml  bacon.toml  bun.lockb  config.yaml  index.ts  justfile  package.json  readme.md  rustfmt.toml  tsconfig.json
parked_html/: danielatraub.html  domainnameshop.html  epik.html  german.html  godaddy.html  indocinrx.html  leggings.html  loco-capital.html  netrivet.html  oceanbamk.html  offeringtalks.html  ravintolauula.html  summitjourneys.html  timberlandjoineryltd.html  venapartments.html
src/: bootstrap.rs  check.rs  config.rs  db.rs  dedupe.rs  exec.rs  html.rs  http.rs  internal.rs  main.rs  prereqs.rs  shared.rs  spec.rs  stream.rs  utils.rs
src/check/: images.rs  mod.rs  parked.rs  words.rs
src/html/: dom.rs
