[package]
name = "wicked"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
html5ever = "0.26.0"
itertools = "0.12.0"
markup5ever_rcdom = "0.2.0"
rand = "0.8.5"
reqwest = "0.11.23"
tl = "0.7.7"
tokio = { version = "1.35.1", features = ["full", "sync"] }
tokio-postgres = "0.7.10"

[lints.rust]
dead-code = "allow"
unused-variables = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
future-not-send = "allow"
uninlined-format-args = { level = "allow", priority = 1 }
wildcard-imports = { level = "allow", priority = 1 }

