[package]
name = "wicked"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
html5ever = "0.26.0"
itertools = "0.12.0"
markup5ever_rcdom = "0.2.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.23"
tl = "0.7.7"
tokio = { version = "1.35.1", features = ["full", "sync"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
semver = "1.0.21"
uuid = { version = "1.6.1", features = ["v4"] }

[lints.rust]
dead-code = "allow"
unused-variables = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
future-not-send = "allow"
uninlined-format-args = { level = "allow", priority = 1 }
wildcard-imports = { level = "allow", priority = 1 }
type-complexity = { level = "allow", priority = 1 }

